update added auth register and login
