# src/data/models/user_model.ts
@@ -2,6 +2,16 @@ export type UserModel = {
     uid: string;
     email: string;
     phone: string;
-    createdAt: string;
-    updatedAt: string;
+    createdAt: Date;
+    updatedAt: Date;
+};
+
+export const sqlToUserModel = (data: any): UserModel => {
+    return {
+        uid: data.uid,
+        email: data.email,
+        phone: data.phone,
+        createdAt: data.createdAt,
+        updatedAt: data.updatedAt
+    };
 };
