# src/data/models/views/auth_view.ts
@@ -2,6 +2,6 @@ import type { UserModel } from "../user_model";
 
 export type AuthView = {
     token: string;
-    expiredAt: string;
+    expiredAt: Date;
     user: UserModel;
 };
