# src/data/requests/auth_request.ts
@@ -1,0 +1,11 @@
+export type AuthLoginRequest = {
+    email: string;
+    password: string;
+};
+
+export type AuthRegisterRequest = {
+    name: string;
+    email: string;
+    password: string;
+    phone: string;
+};
