# src/data/requests/user_request.ts
@@ -1,10 +1,3 @@
-export type CreateUserRequest = {
-    name: string;
-    email: string;
-    password: string;
-    phone: string;
-};
-
 export type UpdateUserRequest = {
     name?: string;
     email?: string;
